<resources>
    <string name="app_name">In-service</string>
    <string name="action_settings">Обзор</string>
    <string name="menu_map">Оформить заказ</string>
    <string name="menu_home">Мои заказы</string>
    <string name="menu_home_mas">Заказы</string>
    <string name="menu_gallery">Настройки</string>
    <string name="menu_slideshow">Служба поддержки</string>
    <string name="menu_tools">Помощь</string>
    <string-array name="typeWork">
        <item>Ходовая часть</item>
        <item>Двигатель</item>
        <item>Топливная система</item>
        <item>Система охлаждения</item>
        <item>Покраска</item>
        <item>Шиномонтаж</item>
        <item>Автоэлектроника</item>
        <item>Сварочные работы</item>
        <item>Автозвук</item>
        <item>Тонировка</item>
        <item>Авто ателье</item>
        <item>Токарно-фрезерные работы</item>
        <item>Прочее</item>
    </string-array>
    <string-array name="MARKA">
        <item>Audi</item>
        <item>BMW</item>
        <item>Acura</item>
        <item>Alfa Romeo</item>
        <item>Aston Martin</item>
        <item>Bentley</item>
        <item>Bugatti</item>
        <item>Buick</item>
        <item>Cadillac</item>
        <item>Chery</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroen</item>
        <item>Dacia</item>
        <item>Daewoo</item>
        <item>Daihatsu</item>
        <item>Datsun</item>
        <item>Dodge</item>
        <item>DS</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Fisker</item>
        <item>Ford</item>
        <item>Geely</item>
        <item>Genesis</item>
        <item>GMC</item>
        <item>Honda</item>
        <item>Hummer</item>
        <item>Hyundai</item>
        <item>Infiniti</item>
        <item>Isuzu</item>
        <item>Iveco</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Koenigsegg</item>
        <item>Lamborghini</item>
        <item>Lancia</item>
        <item>Land Rover</item>
        <item>Lexus</item>
        <item>Lincoln</item>
        <item>Lotus</item>
        <item>Maserati</item>
        <item>Mazda</item>
        <item>Mercedes-Benz</item>
        <item>Mercury</item>
        <item>MG</item>
        <item>Mini</item>
        <item>Lada</item>
        <item>Toyota</item>
        <item>Nissan</item>
        <item>Renault</item>
        <item>Volkswagen</item>
        <item>Mitsubishi</item>
        <item>Ravon</item>
        <item>JAC</item>
    </string-array>
    <string-array name="Audi">
        <item>100</item>
        <item>200</item>
        <item>4000</item>
        <item>50</item>
        <item>5000</item>
        <item>60</item>
        <item>75</item>
        <item>80</item>
        <item>90</item>
        <item>920</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A4 Allroad</item>
        <item>A5</item>
        <item>A6</item>
        <item>A6 Allroad</item>
        <item>A7</item>
        <item>A8</item>
        <item>Cabriolet</item>
        <item>Coupe</item>
        <item>e-tron</item>
        <item>F103</item>
        <item>Formula E</item>
        <item>Fox</item>
        <item>Front</item>
        <item>NSU RO 80</item>
        <item>Q2</item>
        <item>Q3</item>
        <item>Q4</item>
        <item>Q5</item>
        <item>Q7</item>
        <item>Q8</item>
        <item>quattro</item>
        <item>R10 Race Car</item>
        <item>R15 Race Car</item>
        <item>R18 Race Car</item>
        <item>R8</item>
        <item>R8 Race Car</item>
        <item>RS Q3</item>
        <item>RS Q8</item>
        <item>RS2</item>
        <item>RS3</item>
        <item>RS4</item>
        <item>RS5</item>
        <item>RS6</item>
        <item>RS7</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
        <item>S4</item>
        <item>S5</item>
        <item>S6</item>
        <item>S7</item>
        <item>S8</item>
        <item>Sport Quattro</item>
        <item>SQ2</item>
        <item>SQ5</item>
        <item>SQ7</item>
        <item>SQ8</item>
        <item>Super 90</item>
        <item>TT</item>
        <item>TT RS</item>
        <item>TTS</item>
        <item>Typ A</item>
        <item>Typ B</item>
        <item>Typ C</item>
        <item>Typ CT</item>
        <item>Typ E</item>
        <item>Typ K</item>
        <item>Typ M</item>
        <item>Typ P</item>
        <item>Typ R</item>
        <item>Typ SS</item>
        <item>V8</item>
    </string-array>
    <string-array name="BMW">
        <item>02 (E10)</item>
        <item>1-Series</item>
        <item>1M</item>
        <item>2-Series</item>
        <item>2-Series Active Tourer</item>
        <item>2-Series Grand Tourer</item>
        <item>2000 C/CS</item>
        <item>3-Series</item>
        <item>3/15</item>
        <item>315</item>
        <item>3200</item>
        <item>321</item>
        <item>326</item>
        <item>327</item>
        <item>340</item>
        <item>4-Series</item>
        <item>5-Series</item>
        <item>501</item>
        <item>502</item>
        <item>503</item>
        <item>507</item>
        <item>6-Series</item>
        <item>600</item>
        <item>7-Series</item>
        <item>700</item>
        <item>8-Series</item>
        <item>E3W</item>
        <item>E9</item>
        <item>i3</item>
        <item>i4</item>
        <item>i8</item>
        <item>iX3</item>
        <item>M2</item>
        <item>M3</item>
        <item>M4</item>
        <item>M5</item>
        <item>M6</item>
        <item>M8</item>
        <item>New Class</item>
        <item>X1</item>
        <item>X2</item>
        <item>X3</item>
        <item>X3 M</item>
        <item>X4</item>
        <item>X4 M</item>
        <item>X5</item>
        <item>X5 M</item>
        <item>X6</item>
        <item>X6 M</item>
        <item>X7</item>
        <item>Z1</item>
        <item>Z3</item>
        <item>Z3 M</item>
        <item>Z4</item>
        <item>Z4 M</item>
        <item>Z8</item>
    </string-array>
    <string-array name="Acura">
        <item>CDX</item>
        <item>CL</item>
        <item>CSX</item>
        <item>EL</item>
        <item>ILX</item>
        <item>Integra</item>
        <item>Legend</item>
        <item>MDX</item>
        <item>NSX</item>
        <item>RDX</item>
        <item>RL</item>
        <item>RLX</item>
        <item>RSX</item>
        <item>SLX</item>
        <item>TL</item>
        <item>TLX</item>
        <item>TSX</item>
        <item>Vigor</item>
        <item>ZDX</item>
    </string-array>
    <string-array name="AlfaRomeo">
        <item>105/115</item>
        <item>12C</item>
        <item>145</item>
        <item>146</item>
        <item>147</item>
        <item>15 HP</item>
        <item>155</item>
        <item>156</item>
        <item>159</item>
        <item>164</item>
        <item>166</item>
        <item>16C Bimotore</item>
        <item>1750</item>
        <item>1900</item>
        <item>1900 M</item>
        <item>20-30</item>
        <item>2000</item>
        <item>2000 Sportiva</item>
        <item>2300</item>
        <item>24 HP</item>
        <item>2600</item>
        <item>33</item>
        <item>40-60 HP</item>
        <item>4C</item>
        <item>6</item>
        <item>6C</item>
        <item>75</item>
        <item>8C</item>
        <item>8C Competizione</item>
        <item>90</item>
        <item>A12/F12</item>
        <item>Alfasud</item>
        <item>Alfetta</item>
        <item>AR6</item>
        <item>AR8</item>
        <item>Arna</item>
        <item>B.A.T.</item>
        <item>Brera</item>
        <item>Crosswagon Q4</item>
        <item>Dauphine</item>
        <item>Disco Volante</item>
        <item>G1</item>
        <item>Giulia</item>
        <item>Giulietta</item>
        <item>Gran Sport Quattroruote</item>
        <item>GT</item>
        <item>GTA Coupe</item>
        <item>GTV</item>
        <item>Milano</item>
        <item>Mille</item>
        <item>MiTo</item>
        <item>Montreal</item>
        <item>RL</item>
        <item>RM</item>
        <item>Romeo</item>
        <item>RZ</item>
        <item>Saviem</item>
        <item>Scarabeo</item>
        <item>Scighera</item>
        <item>Serie 140/150</item>

        <item>Serie 400</item>
        <item>Serie 50/80</item>
        <item>Serie 500</item>
        <item>Serie 800</item>
        <item>Serie 85/110</item>
        <item>Serie 900</item>
        <item>Spider</item>
        <item>Sport Sedan</item>

        <item>Sport Wagon</item>
        <item>Sprint</item>
        <item>Stelvio</item>
        <item>SZ</item>
        <item>Tipo 158/159</item>
        <item>Tipo 308</item>
        <item>Tipo 33</item>
        <item>Tipo 412</item>

        <item>Tipo 512</item>
        <item>Tipo A</item>
        <item>Tipo B</item>
        <item>
Tipo C
</item>
        <item>Tipo P2</item>
        <item>TZ</item>
    </string-array>
    <string-array name="AstonMartin">
        <item>1½-Litre</item>
        <item>11 HP</item>
        <item>15/98</item>
        <item>2-Litre</item>
        <item>AMR1</item>

        <item>Bulldog</item>
        <item>C-Type</item>
        <item>Coal Scuttle</item>
        <item>Cygnet</item>
        <item>DB AR1</item>
        <item>DB1</item>
        <item>DB10</item>
        <item>DB11</item>
        <item>DB2</item>
        <item>DB3</item>
        <item>DB4</item>
        <item>DB5</item>
        <item>DB6</item>
        <item>DB7</item>

        <item>DB9</item>
        <item>DBR2</item>
        <item>
DBR1
</item>
        <item>DBR4</item>
        <item>DBS</item>
        <item>DBX</item>
        <item>GT-700R</item>
        <item>International</item>
        <item>Lagonda</item>
        <item>
Le Mans
</item>
        <item>LMP1</item>
        <item>Nimrod</item>
        <item>One-77</item>
        <item>Rapide</item>

        <item>Tickford Capri</item>
        <item>Ulster</item>
        <item>V12 Vantage</item>
        <item>V12 Zagato</item>
        <item>V8</item>
        <item>
V8 C2B
</item>
        <item>V8 Vantage</item>
        <item>V8 Zagato</item>
        <item>Valhalla</item>
        <item>Valkyrie</item>
        <item>Vanquish</item>
        <item>Vantage Special Series</item>
        <item>Virage</item>
        <item>Vulcan</item>
    </string-array>
    <string-array name="Bentley">
        <item>3½-Litre</item>
        <item>3-Litre</item>
        <item>4½-Litre</item>
        <item>4¼-Litre</item>
        <item>
4-Litre
</item>
        <item>6½-Litre</item>
        <item>8-Litre</item>
        <item>Arnage</item>
        <item>Azure</item>
        <item>B3</item>

        <item>Bacalar</item>
        <item>Bentayga</item>
        <item>Brooklands</item>
        <item>Continental</item>
        <item>Continental Flying Spur</item>
        <item>Continental GT</item>
        <item>Corniche</item>
        <item>
Eight
</item>
        <item>Flying Spur</item>
        <item>Grand Convertible</item>

        <item>GTZ</item>
        <item>Mark V</item>
        <item>Mark VI</item>
        <item>Mulsanne</item>
        <item>R-Type</item>
        <item>
S1
</item>
        <item>S2</item>
        <item>S3</item>
        <item>Speed 6</item>
        <item>Speed 8</item>
        <item>State Limousine</item>
        <item>T-Series</item>
        <item>Turbo</item>
    </string-array>
    <string-array name="Bugatti">
        <item>Centodieci</item>
        <item>
Chiron
</item>
        <item>Divo</item>
        <item>EB 110</item>
        <item>
EB 112
</item>
        <item>EB Veyron 16.4</item>
        <item>Type 55</item>
    </string-array>
</resources>