<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view_mas">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_mas"
            android:title="@string/menu_home_mas" />
        <item
            android:id="@+id/nav_oplata_mas"
            android:title="Мои заказы" />
        <item
            android:id="@+id/nav_gallery_mas"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow_mas"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools_mas"
            android:title="@string/menu_tools" />
    </group>

</menu>
